--- a/theme/templates/components/switch.html
+++ b/theme/templates/components/switch.html
@@ -13,7 +13,7 @@ Parâmetros:
 - size: sm, default, lg (padrão: default)
 #}
 
-{% with switch_id=id|default:name|default:"" checked=checked|default:False disabled=disabled|default:False %}
+{% with switch_id=id|default:name|default:"switch" checked=checked|default:False disabled=disabled|default:False %}
 <div class="flex items-center space-x-2 {{ class|default:'' }}">
     <button
         type="button"
