--- a/theme/templates/components/checkbox.html
+++ b/theme/templates/components/checkbox.html
@@ -14,7 +14,7 @@ Parâmetros:
 - class: Classes CSS adicionais (opcional)
 #}
 
-{% with checkbox_id=id|default:name|default:"" checked=checked|default:False disabled=disabled|default:False required=required|default:False value=value|default:"on" %}
+{% with checkbox_id=id|default:name|default:"checkbox" checked=checked|default:False disabled=disabled|default:False required=required|default:False value=value|default:"on" %}
 <div class="flex items-center space-x-2 {{ class|default:'' }}">
     <input
         type="checkbox"
