resolvido problema dos comentarios dos componentes que apareciam nas paginas ao usar o componente

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -15,6 +15,9 @@
             <a href="/demo-clean/" class="btn btn-outline btn-lg">
                 Visão Geral
             </a>
+            <a href="/navigation-demo/" class="btn btn-outline btn-lg">
+                Demo Navegação
+            </a>
         </div>
     </div>
 </div>
